[gd_scene load_steps=5 format=3 uid="uid://cpyfep1nwkunn"]

[ext_resource type="Script" uid="uid://nn6wq5vb0cjj" path="res://addons/scaffoldingcafe/panel/scaffolding_side_panel.gd" id="1_scaffold_gd"]
[ext_resource type="Texture2D" uid="uid://cetma4uixhi43" path="res://addons/scaffoldingcafe/icons/arrow-big-down-dash.svg" id="2_r1wvd"]
[ext_resource type="Texture2D" uid="uid://b8bssvtout30w" path="res://addons/scaffoldingcafe/icons/book-open-text.svg" id="4_u21qr"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_2no5w"]
color = Color(1, 1, 1, 1)
thickness = 3

[node name="ScaffoldingSidePanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
script = ExtResource("1_scaffold_gd")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_2no5w")

[node name="HeaderButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
text = "ScaffoldingCafe"
icon = ExtResource("2_r1wvd")
alignment = 0
icon_alignment = 2

[node name="CollapsibleContent" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CollapsibleContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DocsButton" type="Button" parent="CollapsibleContent/HBoxContainer"]
custom_minimum_size = Vector2(78, 36)
layout_mode = 2
size_flags_horizontal = 3
text = "Docs"
icon = ExtResource("4_u21qr")
alignment = 0

[node name="HSeparator" type="HSeparator" parent="CollapsibleContent"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CollapsibleContent"]
layout_mode = 2
size_flags_vertical = 0
current_tab = 0
tabs_rearrange_group = 0

[node name="Tab1" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="SaveFeedbackLabel" type="Label" parent="CollapsibleContent"]
visible = false
layout_mode = 2
text = "Saved!"
horizontal_alignment = 1

[node name="SaveFeedbackTimer" type="Timer" parent="CollapsibleContent"]
wait_time = 1.5
one_shot = true
